# bidkit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: critic.md  overseer.md  researcher.md  team-lead.md  writer.md
evals/: README.md  config.json
evals/design/: expected-1.md  prompt-1.md
evals/verify/: expected-1.md  prompt-1.md
evals/write/: expected-1.md  prompt-1.md
parser/: __init__.py  office_parser.py  office_types.py  office_worker.py  pdf_converter.py  pdf_markdown.py  requirements.txt  run.py
playbooks/diagnose/: SKILL.md
playbooks/output/: SKILL.md
reference/: cross-team-communication.md  error-handling.md  impact-rules.md  proposal-guide-format.md  quality-criteria.md  skills-catalog.md  state-machine.md
reference/domain/: ba.md  da.md  sa.md  ta.md
scripts/: check-deps.sh  validate-bidkit-contracts.js  validate-harness-contracts.js  verify-bidkit.sh  verify-harness.sh
skills/: design.md  diagnose.md  output.md  status.md  verify.md  write.md
skills/design/: SKILL.md
skills/diagnose/: SKILL.md
skills/notion/: SKILL.md
skills/output/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/verify/: SKILL.md
skills/write/: SKILL.md
templates/: ideation-note.md  pdf-style.css  ssot.md
templates/html-theme/: index.html
templates/init/: glossary.yaml  outline.yaml  proposal-meta.yaml  rfp-trace-matrix.md  runtime-state.json
tests/parser/: test_parse_dispatch.py
