[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bidkit-parser"
version = "0.1.0"
description = "Document parser for BidKit — extracts text, tables, and images from PDF, DOCX, PPTX, XLSX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "hwai" }
]
keywords = ["proposal", "document-parser", "pdf", "docx", "pptx", "xlsx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "docling>=2.76.0",
    "pdfplumber>=0.10.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "openpyxl>=3.0.0",
    "striprtf>=0.0.26",
    "pillow>=12.1.1",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/DinN0000/bidkit"
Repository = "https://github.com/DinN0000/bidkit"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["parser"]
